2000-10-05  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_shell (parse_interactive): Term::ReadLine can spew
        warnings over files we can't control; turn warnings off when
        loading it.

	* lib/Mj/Token.pm: Clean up various undeclared variable warnings.

2000-10-04  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Access.pm (_d_post): Fix error when checking
        restrict_post.

2000-10-04  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (trigger):  Use the list-specific triggers
	setting to determine when the bounce, checksum, and post
	triggers will be run.

2000-10-03  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm: Use BounceHandler module; set ISA
	appropriately.

	* lib/Mj/MailOut.pm: Remove bounce handling stuff.

	* lib/Mj/BounceHandler.pm: New file: handle bounces.

	* bin/mj_shell: Add option to dump request and result structures.

	* lib/Majordomo.pm (dispatch): Eliminate warnings when mode is
	empty or contains all non-alphabetics.

2000-10-02  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (dispatch):  Inform on *_done commands.
	Do not inform on *_start commands if they succeed.
	Track the elapsed time taken by a request.

	* lib/Mj/Format.pm (report):  Display the elapsed time
	if one is given.

	* lib/Mj/Inform.pm (inform):  Store the elapsed time of
	the command in the log.
	(_inform_owner)  Include TIME substitution, for the elapsed time.

	* lib/Mj/Log.pm (elapsed):  New routine.  Return the amount
	of time elapsed since the first call to in().

2000-10-02  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (_check_mime): Don't fault messages for
        exceeding max_mime_header_length if it is zero.

2000-10-01  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm (_post):  Add support for the "unique"
	class.  Subscribers with this setting will not receive
	a duplicate copy if a message with the same ID or checksum
	has previously been posted to a list in the same domain.
